# Snake_C

./: CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt  move.c  move.h  sdlrender.c  sdlrender.h  snake.c  snake.h
